--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,39 +28,43 @@
           <% end %>
 
           <div class="d-flex flex-column flex-md-row justify-content-between mt-3">
-            <% if user_signed_in? %>
-              <!-- Signed-in User Buttons -->
-              <%= link_to "Add New Product", new_product_path, class: "btn btn-primary" %>
-              <%= button_to "Delete", @product, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
-              <%= link_to "Edit", edit_product_path(@product), class: "btn btn-primary" %>
-            <% else %>
-              <!-- Guest View: Buy Button -->
-              <%= form_with(url: buy_product_path(@product), method: :post, scope: :order) do |form| %>
-                <div class="form-group">
-                  <%= form.label :kid_name, "Child's Name" %>
-                  <%= form.text_field :kid_name, class: "form-control", required: true %>
-                </div>
-                <div class="form-group">
-                  <%= form.label :kid_class, "Child's Class" %>
-                  <%= form.text_field :kid_class, class: "form-control", required: true %>
-                </div>
-                <div class="form-group">
-                  <%= form.label :payment_info, "Payment Information" %>
-                  <%= form.text_field :payment_info, class: "form-control", required: true %>
-                </div>
-                <div class="form-group">
-                  <%= form.label :quantity, "Quantity" %>
-                  <%= form.number_field :quantity, value: 1, min: 1, class: "form-control", required: true %>
-                </div>
-                <div class="d-flex justify-content-between">
-                  <%= form.submit "Buy Now", class: "btn btn-success" %>
-                  <%= button_to "Add to Cart", add_item_cart_path, method: :post, params: { product_id: @product.id, quantity: 1 }, class: "btn btn-warning" %>
-                </div>
-              <% end %>
+            <!-- Form for adding to cart -->
+            <%= form_with url: add_item_cart_path, method: :post, local: true do |form| %>
+              <%= form.hidden_field :product_id, value: @product.id %>
+              <div class="form-group">
+                <%= form.label :quantity, "Quantity" %>
+                <%= form.number_field :quantity, value: 1, min: 1, class: "form-control", required: true %>
+              </div>
+              <div class="mt-2">
+                <%= form.submit "Add to Cart", class: "btn btn-warning" %>
+              </div>
+            <% end %>
+
+            <!-- Buy Now form -->
+            <%= form_with url: buy_product_path(@product), method: :post, scope: :order, local: true do |form| %>
+              <div class="form-group">
+                <%= form.label :kid_name, "Child's Name" %>
+                <%= form.text_field :kid_name, class: "form-control", required: true %>
+              </div>
+              <div class="form-group">
+                <%= form.label :kid_class, "Child's Class" %>
+                <%= form.text_field :kid_class, class: "form-control", required: true %>
+              </div>
+              <div class="form-group">
+                <%= form.label :payment_info, "Payment Information" %>
+                <%= form.text_field :payment_info, class: "form-control", required: true %>
+              </div>
+              <div class="form-group">
+                <%= form.label :quantity, "Quantity" %>
+                <%= form.number_field :quantity, value: 1, min: 1, class: "form-control", required: true %>
+              </div>
+              <div class="mt-2">
+                <%= form.submit "Buy Now", class: "btn btn-success" %>
+              </div>
             <% end %>
           </div>
 
-          <!-- Common Button for Both Users -->
+          <!-- Back button -->
           <div class="mt-3">
             <%= link_to "Back to Products", products_path, class: "btn btn-secondary" %>
           </div>
