--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -52,6 +52,11 @@
                   <%= form.text_field :payment_info, class: "form-control", required: true %>
                 </div>
 
+                <div class="form-group">
+                    <%= form.label :email, "Your Email" %>
+                    <%= form.email_field :email, class: "form-control", required: true %>
+                </div>
+
                 <% if @product.product_options.any? %>
                   <h5>Select Options:</h5>
                   <% @product.product_options.each do |option| %>
